assets/sass/layouts/_navigation.scss
/* ... */
.has-children > a {
	padding-right: 40px;

	&::before, &::after {
		/* arrow goes on the right side - children navigation */
		right: 20px;
		@include transform-origin(9px 50%);
	}
}

.cd-primary-nav .go-back a {
	padding-left: 40px;

	&::before, &::after {
		/* arrow goes on the left side - go back button */
		left: 20px;
		@include transform-origin(1px 50%);
	}
}

@include MQ(L) {

	.has-children > a {
		&::before, &::after {
			right: 15%;
		}
	}

	.cd-primary-nav > .has-children > a {
		/* main navigation arrows on larger devices */
		padding-right: 30px !important;

		&::before, &::after {
			width: 9px;
			@include transform-origin(50% 50%);
			background: darken($color-3, 10%);
			-webkit-backface-visibility: hidden;
			backface-visibility: hidden;
			@include transition(width .3s, transform .3s);
		}

		&::before {
			right: 12px;
		}

		&::after {
			right: 7px;
		}

		&.selected::before, &.selected::after {
			width: 14px;
		}

		&.selected::before {
			@include transform(translateX(5px) rotate(-45deg));
		}

		&.selected::after {
			@include transform(rotate(45deg));
		}
	} 

	.cd-secondary-nav > .has-children > a::before, .cd-secondary-nav > .has-children > a::after {
		/* remove arrows on secondary nav titles */
		display: none;
	}

	.cd-primary-nav .go-back a {
		padding-left: 20px;

		&::before, &::after {
			left: 1px;
		}
	}
}

.cd-search {
	position: absolute;
	height: $search-height-S;
	width: 100%;
	top: $header-height-S;
	left: 0;
	z-index: $above-content;
	opacity: 0;
	visibility: hidden;
	-webkit-transition: opacity .3s 0s, visibility 0s .3s;
	-moz-transition: opacity .3s 0s, visibility 0s .3s;
	transition: opacity .3s 0s, visibility 0s .3s;

	form {
		height: 100%;
		width: 100%;
	}

	input {
		border-radius: 0;
		border: none;
		background: $color-4;
		height: 100%;
		width: 820px;
		padding: 0;
		box-shadow: inset 0 1px 0 $color-3, 0 3px 6px rgba(#000, .05);
		@include appearance(none);

		@include placeholder {
			color: darken($color-3, 10%);
		}

		&:focus {
			outline: none;
		}
	}

	&.is-visible {
		opacity: 1;
		visibility: visible;
		-webkit-transition: opacity .3s 0s, visibility 0s 0s;
		-moz-transition: opacity .3s 0s, visibility 0s 0s;
		transition: opacity .3s 0s, visibility 0s 0s;
	}

	.nav-is-fixed & {
		position: fixed;
	}

	@include MQ(L) {
		height: $search-height-L;
		top: $header-height-L;

		input {
			padding: 0 2em;
			font-size: 3.2rem;
			font-weight: 300;

			@include placeholder {
				
			}
		}
	}
}

.cd-overlay {
	/* shadow layer visible when navigation is active */
	position: fixed;
	z-index: $content;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	cursor: pointer;
	background-color: rgba($bc-blue, .8);
	visibility: hidden;
	opacity: 0;
	@include backface-visibility(hidden);
	@include transition(opacity .3s 0s, visibility 0s .3s, transform .3s 0s);
	
	&.is-visible {
		opacity: 1;
		visibility: visible;
		@include transition(opacity .3s 0s, visibility 0s 0s, transform .3s 0s);
	}

	@include MQ(maxL) {
		&.is-visible {
			@include transform(translateX(-$nav-width-S));
		}
		.nav-on-left &.is-visible {
			@include transform(translateX($nav-width-S));
		}
		&.is-visible.search-is-visible, .nav-on-left &.is-visible.search-is-visible {
			@include transform(translateX(0));
		}
	}
}

/* -------------------------------- 

support for no js 

-------------------------------- */

.no-js .cd-primary-nav {
	position: relative;
	height: auto;
	width: 100%;
	overflow: visible;
	visibility: visible;
	z-index: $content;
}

.no-js .cd-search {
	position: relative;
	top: 0;
	opacity: 1;
	visibility: visible;
}

@include MQ(L) {
	.no-js .cd-primary-nav {
		position: absolute;
		z-index: $above-content;
		display: inline-block;
		width: auto;
		top: 0;
		right: 150px;
		padding: 0;
	}

	.no-js .nav-is-fixed .cd-primary-nav {
		position: fixed;
	}
}

